--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,30 +131,28 @@
      <% if @items.present? %>
         <% @items.each do |item| %>
           <li class='list'>
-            <%= link_to item_path(item.id) do %>
-              <div class='item-img-content'>
-                <%= image_tag item.image, class: "item-img" %>
-                <%# 商品が売れていればsold outを表示しましょう %>
-                <%# if @items.nil? %>
-                <div class='sold-out'>
-                  <span>Sold Out!!</span>
+              <%= link_to item_path(item.id) do %>
+                <div class='item-img-content'>
+                  <%= image_tag item.image, class: "item-img" %>
+                  <% if item.buy.present? %>
+                  <div class='sold-out'>
+                    <span>Sold Out!!</span>
+                  </div>
+                  <% end %>
                 </div>
-                <%# end %>
-                <%# //商品が売れていればsold outを表示しましょう %>
-              </div>
-              <div class='item-info'>
-                <h3 class='item-name'>
-                  <%= item.product %>
-                </h3>
-                <div class='item-price'>
-                  <span><%= item.price %>円<br><%= item.freight.name %></span>
-                  <div class='star-btn'>
-                    <%= image_tag "star.png", class:"star-icon" %>
-                    <span class='star-count'>0</span>
+                <div class='item-info'>
+                  <h3 class='item-name'>
+                    <%= item.product %>
+                  </h3>
+                  <div class='item-price'>
+                    <span><%= item.price %>円<br><%= item.freight.name %></span>
+                    <div class='star-btn'>
+                      <%= image_tag "star.png", class:"star-icon" %>
+                      <span class='star-count'>0</span>
+                    </div>
                   </div>
                 </div>
-              </div>
-            <% end %>
+              <% end %>
           </li>
         <% end %>
      <% else %>
