--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -13,13 +13,17 @@
       <div class="weight-bold-text">
         商品画像
         <span class="indispensable">必須</span>
-        <div id="image-list"></div>
+        
       </div>
       <div class="click-upload">
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :image, id:"item-image" %>
+        <%= f.file_field :images, name: 'item[images][]', id:"item-image" %>
+        <div id="image-list"></div>
+        <% @item.images.each do |image| %>
+          <%= image_tag image, class: 'pre-images' %>
+        <% end %>
       </div>
     </div>
     <div class="new-items">
