--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -29,7 +29,7 @@
   height: 50vh;
   width: 60vw;
   min-height: 500px;
-  background-color: rgb(205, 202, 202);
+  /* background-color: rgb(205, 202, 202); */
   object-fit: contain;
 }
 
@@ -204,4 +204,13 @@
   text-decoration: none;
   font-weight: bold;
   font-size: 23px;
+}
+
+
+.item-sub {
+  height: 10vh;
+  width: 20vw;
+  min-height: 200px;
+  /* background-color: rgb(205, 202, 202); */
+  object-fit: contain;
 }
