--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -21,7 +21,12 @@ app/assets/stylesheets/items/new.css %>
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :image, id:"item-image" %>
+        <%= f.file_field :images, name: 'item[images][]', id:"item-image" %>
+        <div id="image-list"></div>
+        <% @item.images.each_with_index do |image, index| %>
+          <%= image_tag image, class: 'pre-images', id:"image-#{index}"%>
+          <%= f.file_field :images, name: 'item[images][]', id:"edit-image-#{index}" %>
+        <% end %>
       </div>
     </div>
     <%# /商品画像 %>
@@ -139,7 +144,7 @@ app/assets/stylesheets/items/new.css %>
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
       <%= f.submit "変更する" ,class:"sell-btn" %>
-      <%=link_to 'もどる', "#", class:"back-btn" %>
+      <%=link_to 'もどる', item_path, class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
   </div>
