--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,8 +7,9 @@
       <%= @item.product %>
     </h2>
     <div class="item-img-content">
+      <%= image_tag @item.images[0] , class: "item-box-img" %>
       <% @item.images.each do |image|%>
-       <%= image_tag image ,class:"item-box-img" %>
+       <%= image_tag image ,class:"item-sub" %>
       <% end %> 
       <% if @item.buy.present? %>
       <div class="sold-out">
