--- a/app/views/buys/index.html.erb
+++ b/app/views/buys/index.html.erb
@@ -6,8 +6,15 @@
       購入内容の確認
     </h1>
     <%# 購入内容の表示 %>
-    <div class='buy-item-info'>
-      <%= image_tag @item.image, class: 'buy-item-img' %>
+    <div class='buy-box'>
+      <div class="buy-box">
+          <div class="buy_item_img">
+            <%= image_tag @item.images[0], class: 'buy-box-img' %>
+            <% @item.images.each do |image|%>
+            <%= image_tag image ,class:"buy-item-sub" %>
+            <% end %> 
+          </div>
+        </div>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
           <%= @item.product %>
